# utility

./: .clang-tidy  README.md
.github/workflows/: clang-format  clang-format-check.yml  clang-format.yml  clang-tidy.yml  cmake.yml  workflow.yml
utility/include/utility/: math.hpp  misc.hpp  type_traits.hpp  warnings.hpp
utility_test/: CMakeLists.txt  test.cpp
